--- a/src/launch.html
+++ b/src/launch.html
@@ -19,11 +19,11 @@
     -->
 
     <!-- FHIR Client JS Library -->
-    <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script> -->
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <!-- <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script> -->
     <script>
       FHIR.oauth2.authorize({
         'client_id': '3e24eea1-8af9-4304-ad71-be790b06ad4f',
