--- a/src/index.html
+++ b/src/index.html
@@ -10,60 +10,7 @@
 <body>
   <app-root>
     <body>
-      <div id='errors'>
-      </div>
-      <div id="loading" class="spinner">
-        <div class="bounce1"></div>
-        <div class="bounce2"></div>
-        <div class="bounce3"></div>
-      </div>
-      <div id='holder' >
-        <h2>Example-SMART-App</h2>
-  
-        <h2>Patient Resource</h2>
-        <table>
-          <tr>
-            <th>First Name:</th>
-            <td id='fname'></td>
-          </tr>
-          <tr>
-            <th>Last Name:</th>
-            <td id='lname'></td>
-          </tr>
-          <tr>
-            <th>Gender:</th>
-            <td id='gender'></td>
-          </tr>
-          <tr>
-            <th>Date of Birth:</th>
-            <td id='birthdate'></td>
-          </tr>
-        </table>
-        <h2>Observation Resource</h2>
-        <table>
-          <tr>
-            <th>Height:</th>
-            <td id='height'></td>
-          </tr>
-          <tr>
-            <th>Systolic Blood Pressure:</th>
-            <td id='systolicbp'></td>
-  
-          </tr>
-          <tr>
-            <th>Diastolic Blood Pressure:</th>
-            <td id='diastolicbp'></td>
-          </tr>
-          <tr>
-            <th>LDL:</th>
-            <td id='ldl'></td>
-          </tr>
-          <tr>
-            <th>HDL:</th>
-            <td id='hdl'></td>
-          </tr>
-        </table>
-      </div>
+      
       <!-- Required JS files to enable this page to embed within an MPage -->
       <!--
         Temporarily disable cerner-smart-embeddable-lib
@@ -80,8 +27,8 @@
       <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
       <!-- https://github.com/cerner/fhir-client-cerner-additions -->
       <!-- <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script> -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <script>
+      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+      <!-- <script>
         extractData().then(
           //Display Patient Demographics and Observations if extractData was success
           function(p) {
@@ -94,7 +41,7 @@
             $('#errors').html('<p> Failed to call FHIR Service </p>');
           }
         );
-      </script>
+      </script> -->
     </body>
   </app-root>
 </body>
